mealie/mealie-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/component: planning
