mealie/mealie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/component: planning
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
      app.kubernetes.io/component: planning
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
        app.kubernetes.io/component: planning
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.27.0
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - mountPath: /app/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie
