mealie/mealie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/component: planning
spec:
  selector:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/component: planning
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
