mealie/mealie-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/component: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`recept.albinmedoc.se`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
